// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spotlight Should match previous snapshot with a targetElement 1`] = `
<body>
  .c9 {
  opacity: 0;
  background: linear-gradient( 90deg, rgba(0,0,0,0.75), rgba(0,0,0,0.25), rgba(0,0,0,0.75) ) repeat;
  color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-size: 100vw 100vh;
  background-attachment: fixed;
  border-radius: 0.25rem;
  -webkit-animation: gZwmnl 2s linear infinite;
  animation: gZwmnl 2s linear infinite;
}

.c3 {
  display: block;
  position: relative;
}

.c3 > * {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
}

.c5 {
  position: relative;
}

.c7 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  position: relative;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  contain: layout;
  outline: 0 none;
  border: 1px solid transparent;
  cursor: pointer;
  background-color: #9FA2A5;
  color: #000;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4:hover {
  background-color: #929599;
}

.c4:focus {
  outline: none;
  box-shadow: 0 0 5px 0.150rem #338BAA;
}

.c6 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

.c8 {
  border-radius: 0.25em;
}

.c0 {
  height: 100%;
  width: 100%;
  position: fixed;
  top: 0;
  left: 0;
  contain: strict;
  -webkit-clip-path: url(#foundryMask);
  clip-path: url(#foundryMask);
  z-index: 200;
}

.c1 {
  position: fixed;
  z-index: -1;
}

.c2 {
  display: inline-block;
  position: fixed;
  top: 0;
  left: 0;
  padding-bottom: 1rem;
  z-index: 201;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  max-width: 50vw;
}

<div>
    <div
      class=" c0"
      globalstyles="
  
"
      style="background-color: rgba(0, 0, 0, 0.7);"
    >
      <div
        class=" c1"
        globalstyles="
  
"
        style="top: 0px; left: 0px; width: 1024px; height: 383px;"
      />
      <div
        class=" c1"
        globalstyles="
  
"
        style="top: 384px; left: 0px; width: 1024px; height: 383px;"
      />
      <div
        class=" c1"
        globalstyles="
  
"
        style="top: 384px; left: 0px; width: 512px; height: 2px;"
      />
      <div
        class=" c1"
        globalstyles="
  
"
        style="top: 384px; right: 0px; width: 512px; height: 2px;"
      />
    </div>
    <svg
      height="0"
      style="position: fixed; top: 0px; left: 0px;"
      viewBox="0 0 1024 768"
      width="0"
    >
      <defs>
        <clippath
          clip-rule="evenodd"
          id="foundryMask"
        >
          <path
            d="M 0 0 h1024 v768 h-1024 
    M 512 384
    A 0, 0, 0, 1, 1, 512 385
    L 512 384
  "
            fill="#FFFFFF"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class=" c2"
      globalstyles="
  
"
      style="transform: translate(512px, 384px) translate(0%, -100%);"
    >
      <button
        class=" c3 c4"
        color="#9FA2A5"
        elevation="0"
        role="button"
        type="button"
      >
        Test
        <div
          class="c5 c6"
        >
          <svg
            class="c7 c8"
            height="0px"
            viewBox="0 0 0 0"
            width="0px"
          />
        </div>
        <div
          class=" c9"
          color="#000"
        />
      </button>
    </div>
  </div>
</body>
`;

exports[`Spotlight Should match previous snapshot with default props 1`] = `
.c0 {
  height: 100%;
  width: 100%;
  position: fixed;
  top: 0;
  left: 0;
  contain: strict;
  -webkit-clip-path: url(#foundryMask);
  clip-path: url(#foundryMask);
  z-index: 200;
}

.c1 {
  position: fixed;
  z-index: -1;
}

.c2 {
  display: inline-block;
  position: fixed;
  top: 0;
  left: 0;
  padding-bottom: 1rem;
  z-index: 201;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  max-width: 50vw;
}

<body>
  <div>
    <div
      class=" c0"
      globalstyles="
  
"
      style="background-color: rgba(0, 0, 0, 0.7);"
    >
      <div
        class=" c1"
        globalstyles="
  
"
        style="top: 0px; left: 0px; width: 1024px; height: 383px;"
      />
      <div
        class=" c1"
        globalstyles="
  
"
        style="top: 384px; left: 0px; width: 1024px; height: 383px;"
      />
      <div
        class=" c1"
        globalstyles="
  
"
        style="top: 384px; left: 0px; width: 512px; height: 2px;"
      />
      <div
        class=" c1"
        globalstyles="
  
"
        style="top: 384px; right: 0px; width: 512px; height: 2px;"
      />
    </div>
    <svg
      height="0"
      style="position: fixed; top: 0px; left: 0px;"
      viewBox="0 0 1024 768"
      width="0"
    >
      <defs>
        <clippath
          clip-rule="evenodd"
          id="foundryMask"
        >
          <path
            d="M 0 0 h1024 v768 h-1024 
    M 512 384
    A 0, 0, 0, 1, 1, 512 385
    L 512 384
  "
            fill="#FFFFFF"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class=" c2"
      globalstyles="
  
"
      style="transform: translate(512px, 384px) translate(0%, -100%);"
    />
  </div>
</body>
`;
